# NeuralWatch

./: .gitignore  LICENSE  README.md  README_PYPI.md  architecture_diagram.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml
demo/: dummy_app.py  generate_demo_data.py  generate_docs.py  generate_injection_data.py  generate_pypi_readme.py  live_simulator.py  splunk_setup.ps1  splunk_setup.py  splunk_setup.sh
mcp_agent/: __init__.py  agent.py  cli.py  mcp_client.py  spl_generator.py
mcp_agent/prompts/: system_prompt.txt
neuralwatch_sdk/: __init__.py  cli.py  cost_estimator.py  forwarder.py  instrumentor.py
neuralwatch_sdk/templates/: app.conf.tmpl  dashboard_compliance.xml.tmpl  dashboard_injection.xml.tmpl  dashboard_main.xml.tmpl  props.conf.tmpl  savedsearches.conf.tmpl
splunk_app/dashboards/: neuralwatch_compliance.xml  neuralwatch_main.xml
splunk_app/default/: inputs.conf  props.conf  transforms.conf
splunk_app/default/data/ui/nav/: default.xml
splunk_app/default/data/ui/views/: neuralwatch_compliance.xml  neuralwatch_injection.xml  neuralwatch_main.xml
splunk_app/lookups/: neuralwatch_compliance_baseline.csv  neuralwatch_cost_model.csv
tests/: conftest.py
tests/unit/: test_cost_estimator.py  test_forwarder.py  test_instrumentor.py
