[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralwatch-splunk"
version = "0.1.2"
description = "AI Operations and Observability Platform on Splunk"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "NeuralWatch Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "splunk-sdk>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "requests-mock>=1.10.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
neuralwatch = "neuralwatch_sdk.cli:app"

[tool.setuptools.packages.find]
include = ["neuralwatch_sdk*"]


[tool.ruff]
exclude = [
    ".agents",
    ".git",
    "venv",
    ".venv",
    "build",
    "dist"
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "^\\.agents/",
]

